--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -220,9 +220,9 @@
 @state-success-text: #3c763d;
 @state-success-bg: #dff0d8;
 @state-success-border: darken(spin(@state-success-bg, -10), 5%);
-@state-info-text: #31708f;
-@state-info-bg: #d9edf7;
-@state-info-border: darken(spin(@state-info-bg, -10), 7%);
+@state-info-text: #555;
+@state-info-bg: #a6daf0;
+@state-info-border: darken(@state-info-bg, 2%);
 @state-warning-text: #8a6d3b;
 @state-warning-bg: #fcf8e3;
 @state-warning-border: darken(spin(@state-warning-bg, -10), 5%);
@@ -409,7 +409,7 @@
 @brandPrimaryDark: #0c91cb;
 @warningColor: #E4522A;
 
-@backgroundColorMediumDark: #d8d8d8;
+@backgroundColorMediumDark: #dadada;
 @backgroundColorMedium: #e9e9e9;
 @backgroundColorLight: #efefef;
 @backgroundColorLighter: #f2f2f2;
@@ -420,15 +420,15 @@
 
 @borderColorSelection: #888;
 @borderColorDark: #d4d4d4;
-@borderColorMedium: #d9d9d9;
-@borderColorMediumTransparent: fadeout(#d9d9d9, 40%);
+@borderColorMedium: #d7d7d7;
+@borderColorMediumTransparent: fadeout(#d7d7d7, 30%);
 @borderColorLight: #e5e5e5; // also table color
 
 @textColorDark: #222;
 @textColorMedium: #777;
-@textColorButton: #888;
+@textColorButton: #555;
 @textColorMuted: #999;
-@textColorLight: #bbb;
+@textColorLight: #aaa;
 @textColorError: #D84315;
 
 @colorLink: #069cd1;
