Tweak input border border to match buttons

--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -88,7 +88,7 @@
 @input-bg: #fff;
 @input-bg-disabled: @gray-lighter;
 @input-color: @gray;
-@input-border: #ccc;
+@input-border: #ddd;
 @input-border-radius: @border-radius-base;
 @input-border-radius-large: @border-radius-large;
 @input-border-radius-small: @border-radius-small;
