--- a/modules/mod_admin/lib/admin-bootstrap3/css/bootstrap.css
+++ b/modules/mod_admin/lib/admin-bootstrap3/css/bootstrap.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=d33692b32c2f13344293)
- * Config saved to config.json and https://gist.github.com/d33692b32c2f13344293
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=50268056ade18f16b413)
+ * Config saved to config.json and https://gist.github.com/50268056ade18f16b413
  */
 /*!
  * Bootstrap v3.3.5 (http://getbootstrap.com)
@@ -2564,7 +2564,7 @@ output {
   color: #555555;
   background-color: #ffffff;
   background-image: none;
-  border: 1px solid #cccccc;
+  border: 1px solid #dddddd;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -3957,7 +3957,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #555555;
   text-align: center;
   background-color: #eeeeee;
-  border: 1px solid #cccccc;
+  border: 1px solid #dddddd;
   border-radius: 4px;
 }
 .input-group-addon.input-sm {
