mod_admin_predicate: add overview pages of edges, optionally filter by predicate. Issue #1075

--- a/modules/mod_admin/lib/less/zotonic-admin.less
+++ b/modules/mod_admin/lib/less/zotonic-admin.less
@@ -26,7 +26,7 @@ limitations under the License.
 @import "base.less";
 @import "bootstrap-overrides.less";
 @import "buttons.less";
-@import "connections-list.less";
+@import "connections.less";
 @import "dashboard.less";
 @import "edit-blocks.less";
 @import "edit-media.less";
