--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -73,7 +73,7 @@ ul.blocks.ui-sortable .widget-header:before {
   font-style: normal;
 }
 body {
-  color: #222222;
+  color: #222;
   background-color: #fff;
 }
 body.wait {
@@ -102,12 +102,12 @@ p {
 .unpublished a:not(.btn),
 .unpublished .text-muted,
 .unpublished .help-block {
-  color: #aaaaaa;
+  color: #aaa;
 }
 .z-drag-drop-placeholder,
 ul.blocks.ui-sortable .ui-sortable-placeholder,
 ul.media > li.ui-sortable-placeholder {
-  background: #dddddd;
+  background: #ddd;
   border: none;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -115,7 +115,7 @@ ul.media > li.ui-sortable-placeholder {
   visibility: visible !important;
 }
 .z-text-light {
-  color: #aaaaaa;
+  color: #aaa;
 }
 .z-button-row {
   *zoom: 1;
@@ -147,7 +147,7 @@ body.noframe > .admin-container {
 .widget .widget-section-header {
   font-size: 13px;
   text-shadow: 0 1px 0 rgba(255,255,255,.5);
-  color: #777777;
+  color: #777;
 }
 .admin-word-break,
 .admin-header h2,
@@ -198,7 +198,7 @@ pre:empty {
   display: none;
 }
 .text-muted {
-  color: #999999;
+  color: #999;
 }
 .nav .dropdown-menu > li > a.has-icon,
 .nav .dropdown-toggle.has-icon {
@@ -274,7 +274,7 @@ pre:empty {
 }
 a.close,
 button.close {
-  color: #555555;
+  color: #555;
 }
 .radio-inline,
 .checkbox-inline,
@@ -285,7 +285,7 @@ button.close {
   margin-bottom: 5px;
 }
 .checkbox label {
-  color: #555555;
+  color: #555;
 }
 .pagination > li > a {
   -webkit-user-select: none;
@@ -298,7 +298,7 @@ button.close {
 }
 .control-label {
   font-weight: normal;
-  color: #777777;
+  color: #777;
   text-shadow: 0 1px 0 rgba(255,255,255,.5);
 }
 @media (min-width: 768px) {
@@ -310,10 +310,10 @@ code {
   padding: 0;
 }
 .z-btn-remove {
-  color: #555555;
+  color: #555;
 }
 .z-btn-remove:hover {
-  color: #222222;
+  color: #222;
 }
 .btn {
   position: relative;
@@ -374,6 +374,16 @@ fieldset[disabled] .btn-primary.active {
   padding-right: 14px;
   /* right-aligned undo button in page connections */
 }
+.rsc-item-wrapper {
+  margin: 0 0 15px 0;
+}
+.rsc-item {
+  overflow: hidden;
+  height: 5em;
+}
+.rsc-item img {
+  margin: 0 10px 0 0;
+}
 .dashboard .widget {
   border: 1px solid rgba(215, 215, 215, 0.7);
 }
@@ -396,7 +406,7 @@ fieldset[disabled] .btn-primary.active {
 .dashboard .table > thead > tr > th:last-child,
 .dashboard .table > tbody > tr > td:last-child {
   width: 40%;
-  color: #999999;
+  color: #999;
 }
 .dashboard .table th {
   display: none;
@@ -434,7 +444,7 @@ ul.blocks.ui-sortable .widget-header:before {
   line-height: 16px;
   left: 15px;
   top: 15px;
-  color: #999999;
+  color: #999;
 }
 ul.blocks.ui-sortable .form-control.block-name {
   background-color: transparent;
@@ -538,7 +548,7 @@ ul.media > li .bottom .caption a {
 }
 .edit-page .admin-header .admin-edit-dates,
 .edit-page .admin-header .admin-edit-dates a {
-  color: #aaaaaa;
+  color: #aaa;
 }
 .edit-page .admin-header .admin-edit-dates a {
   text-decoration: underline;
@@ -599,7 +609,7 @@ div + .admin-edit-no-features {
 .edit-message {
   background-color: #a6daf0;
   border-color: #a6daf0;
-  color: #555555;
+  color: #555;
 }
 .edit-message .btn {
   margin-top: -2px;
@@ -874,7 +884,7 @@ span.icon_status.icon_status_ok:before {
 }
 span.icon_status.icon_status_running:after,
 span.icon_status.icon_status_ok:after {
-  background: #00d100;
+  background: #00D100;
   box-shadow: inset 0 -7px 7px rgba(100, 100, 100, 0.1), inset 0 7px 7px rgba(255, 255, 255, 0.3);
 }
 span.icon_status.icon_status_error:before {
@@ -884,7 +894,7 @@ span.icon_status.icon_status_error:before {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#b2613c', endColorstr='#f6a580', GradientType=0);
 }
 span.icon_status.icon_status_error:after {
-  background: #ed4a00;
+  background: #ED4A00;
   box-shadow: inset 0 -7px 7px rgba(100, 100, 100, 0.1), inset 0 7px 7px rgba(255, 255, 255, 0.3);
 }
 span.icon_status.icon_status_warning:before,
@@ -896,7 +906,7 @@ span.icon_status.icon_status_retrying:before {
 }
 span.icon_status.icon_status_warning:after,
 span.icon_status.icon_status_retrying:after {
-  background: #ffbd00;
+  background: #FFBD00;
   box-shadow: inset 0 -7px 7px rgba(100, 100, 100, 0.1), inset 0 7px 7px rgba(255, 255, 255, 0.3);
 }
 span.icon_status.icon_status_starting:before {
@@ -906,7 +916,7 @@ span.icon_status.icon_status_starting:before {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#adb83c', endColorstr='#f1fc80', GradientType=0);
 }
 span.icon_status.icon_status_starting:after {
-  background: #e2f800;
+  background: #E2F800;
   box-shadow: inset 0 -7px 7px rgba(100, 100, 100, 0.1), inset 0 7px 7px rgba(255, 255, 255, 0.3);
 }
 ul.suggestions-list {
@@ -928,7 +938,7 @@ ul.suggestions-list li a {
   padding: 2px 4px;
 }
 ul.suggestions-list li a .pull-right {
-  color: #999999;
+  color: #999;
 }
 ul.suggestions-list li a:hover span.pull-right,
 ul.suggestions-list li a:hover {
@@ -1004,7 +1014,7 @@ table.do_adminLinkedTable .admin-list-thumb > img {
 .table tbody tr.clickable:hover th,
 .table tbody tr:hover td.clickable,
 .table tbody tr:hover th.clickable {
-  background-color: #eeeeee;
+  background-color: #eee;
 }
 table.table tr.unpublished td a.btn-success {
   color: white;
@@ -1072,7 +1082,7 @@ th a:hover .arrow.down {
 .nav.nav-pills > li > a,
 .widget ul.nav-tabs > li > a {
   background-color: transparent;
-  color: #555555;
+  color: #555;
 }
 .minimalTabs li.active > a,
 .minimalTabs li.active > a:focus,
@@ -1086,7 +1096,7 @@ th a:hover .arrow.down {
   border-style: none none solid none;
   border-width: 2px;
   border-bottom-color: #00C853;
-  color: #555555;
+  color: #555;
 }
 .minimalTabs.nav-justified,
 .nav.nav-pills.nav-justified,
@@ -1148,10 +1158,10 @@ th a:hover .arrow.down {
 .thumbnails .thumbnail,
 .thumbnails .thumbnail a:link,
 .thumbnails .thumbnail a:visited {
-  color: #222222;
+  color: #222;
 }
 .thumbnails .thumbnail:hover {
-  border-color: #888888;
+  border-color: #888;
 }
 .thumbnails .thumbnail.thumbnail-connected:not(.thumbnail-depiction) {
   background-color: #f5f5f5;
@@ -1161,7 +1171,7 @@ th a:hover .arrow.down {
 .thumbnails .thumbnail.thumbnail-connected:not(.thumbnail-depiction) h6,
 .thumbnails .thumbnail.thumbnail-connected:not(.thumbnail-depiction) a:link,
 .thumbnails .thumbnail.thumbnail-connected:not(.thumbnail-depiction) a:visited {
-  color: #aaaaaa;
+  color: #aaa;
 }
 .thumbnails .thumbnail.thumbnail-connected:not(.thumbnail-depiction) img {
   opacity: .3;
@@ -1297,10 +1307,10 @@ ul.tree-list li.menu-item > div > span:not(.btns) {
   min-height: 34px;
 }
 ul.tree-list li.menu-item > div > a {
-  color: #777777;
+  color: #777;
 }
 ul.tree-list li.menu-item > div > a:hover {
-  color: #222222;
+  color: #222;
   text-decoration: none;
 }
 ul.tree-list li.menu-item > div a.menu-toggle {
@@ -1331,7 +1341,7 @@ ul.tree-list li.menu-item > div a.menu-toggle > i.menu-expand {
   display: block;
 }
 ul.tree-list li.menu-item > div .label {
-  color: #999999;
+  color: #999;
 }
 ul.tree-list li.menu-item img.admin-list-dashboard {
   position: absolute;
@@ -1515,16 +1525,6 @@ ul.tree-list.tree-list-menu li.menu-item span.category {
 .widget .widget-content > :last-child {
   margin-bottom: 15px;
 }
-.widget .widget-content .rsc-item-wrapper {
-  margin: 0 0 15px 0;
-}
-.widget .widget-content .rsc-item {
-  overflow: hidden;
-  height: 5em;
-}
-.widget .widget-content .rsc-item img {
-  margin: 0 10px 0 0;
-}
 .widget .tab-pane {
   padding-top: 15px;
 }
@@ -1570,7 +1570,7 @@ ul.tree-list.tree-list-menu li.menu-item span.category {
   line-height: inherit;
 }
 .widget .widget-header .widget-header-tools .z-btn-help {
-  color: #aaaaaa;
+  color: #aaa;
 }
 .widget .widget-header .z-icon-plus,
 .widget .widget-header .z-icon-minus {
