mod_admin_predicate: fine-tune display of items

--- a/modules/mod_admin/lib/less/connections.less
+++ b/modules/mod_admin/lib/less/connections.less
@@ -5,10 +5,7 @@
     margin: 0 0 @widgetVerticalPadding 0;
 }
 .rsc-item {
-    overflow: hidden;
-    height: 5em;
-    
-    img {
+    .thumb {
         margin: 0 10px 0 0;
     }
 }
